# SoftBR

./: .gitignore  CMakeLists.txt  README.en.md  README.md
include/: buffer_manager.h  consts.h  decoder.hpp  executable_segments.h  libunwind-aarch64.h  log.h  signal_info.h  stack_lbr_utils.h  thread_context.h  unwind.h  utils.h
scripts/: softbr-to-perfdata.py
src/engine/: main.cpp
src/test/: simpleLoop.cpp
src/test/buffer_manager/: test.cpp
src/test/evaluate_br/: collect.sh  foo.cpp  foo2.cpp  prof.sh  test_fork.cpp
src/test/perf/: foo.cpp
src/utils/: log.cpp  thread_context.cpp  unwind.cpp  utils.cpp
